# SF-311-Data-Analysis

./: .env.example  311_api_test.ipynb  311_historic_to_json.ipynb  README.md  aggregations.py  api_311.py  dag.py  main.py  map_aggs.py  mongodb_to_df.ipynb  pyproject.toml  sf_tickets.html
api/: api_311.py  dockerfile  environment.yaml
spark/: describe_features.py  describe_features_output.md  feature_transform_cloud.py  features_ready_gcloud.md  train_model_cloud.py
