[project]
name = "sf-311-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "apache-airflow>=3.1.0",
    "dash>=4.0.0",
    "dash-ag-grid>=33.3.3",
    "dash-bootstrap-components>=2.0.4",
    "dash-leaflet>=1.1.3",
    "fastapi>=0.128.5",
    "folium>=0.20.0",
    "google-cloud-storage>=3.9.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "mlflow>=3.9.0",
    "pandas>=2.0.0",
    "pillow>=7.1.0",
    "plotly>=6.5.2",
    "pyarrow>=7.0",
    "pymongo>=4.0",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sodapy>=2.2.0",
    "streamlit>=1.45.0",
    "streamlit-folium>=0.26.1",
    "uvicorn>=0.40.0",
]
